# tutorai

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/verify/: SKILL.md
scripts/: render-icon.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  jobs.rs  lib.rs  main.rs  store.rs
src/components/: AiPanel.tsx  AnnotationSidebar.tsx  ChatTab.tsx  Dropdown.tsx  Home.tsx  Icons.tsx  MarkupRail.tsx  PageAnnotations.tsx  PageInsights.tsx  ProjectTab.tsx  QuizTab.tsx  Reader.tsx  SelectionPopover.tsx  Sidebar.tsx  SummaryTab.tsx  TabStrip.tsx  Toolbar.tsx
src/lib/: ai.ts  annotGeometry.ts  annotations.tsx  insights.tsx  markdown.ts  pdf.ts  session.tsx  settings.ts  tauri.ts  types.ts
